--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
 
         <header>
-            <h1>The webMath Table printer</h1>
+            <h1>The webMath Table Printer</h1>
         </header>
 
         <div class="taking-table-input">
@@ -29,7 +29,9 @@
         </div>
 
         <div id="table-output"></div>
+
         <h2> <a href="#explore-section">Explore more</a></h2>
+        
         <div class="i-button">i</div>
         <div class="pop-up">
             <div class="pop-up-close-btn">Close</div>
